# pitch

./: .rustfmt.toml  Cargo.toml  LICENSE  README.md  changelog.md  readme.md
benches/: detect.rs
examples/: bad.opus  test.rs
src/: lib.rs
