# "pitch" - Licensed under the Boost Software License (see /LICENSE)

[package]
name = "pitch"
version = "0.2.0"
authors = [
	"Jeron Aldaron Lau <jeronlau@plopgrizzly.com>",
	"Douglas P. Lau <doug.p.lau@gmail.com>"
]

license = "BSL-1.0"
documentation = "https://docs.rs/pitch"
homepage = "https://lordaldaron.github.io/pitch"
repository = "https://github.com/LordAldaron/pitch"

readme = "readme.md"
description = "Quickly and accurately determine the pitch and volume of a sound sample."
keywords = ["bcf", "bacf", "acf", "auto-correlation", "detection"]
categories = ["algorithms", "multimedia::audio"]

[dependencies]

[dev-dependencies]
byteorder = "1.2"
criterion = "0.2"

[[bench]]
name = "detect"
harness = false
