[package]
name = "pitch"
version = "0.2.0"
edition = "2018"
license = "Apache-2.0 OR BSL-1.0 OR MIT"
documentation = "https://docs.rs/pitch"
homepage = "https://github.com/NibbleRealm/pitch/releases"
repository = "https://github.com/NibbleRealm/pitch"
readme = "README.md"
description = "Quickly and accurately determine the pitch and volume of a sound sample."
keywords = ["bcf", "bacf", "acf", "auto-correlation", "detection"]
categories = [
  "algorithms",
  "multimedia::audio",
  "multimedia",
  "no-std",
]

[dev-dependencies]
byteorder = "1.5.0"
criterion = "0.6.0"

[[bench]]
name = "detect"
harness = false
